margin-top-8 to mt-8

--- a/templates/accounts/create-profile.html
+++ b/templates/accounts/create-profile.html
@@ -58,7 +58,7 @@
       </div>
     </div>
 
-    <div class="w-80 margin-top-8">
+    <div class="w-80 mt-8">
       <small>
         Providing your personal information is optional. By providing it, you
         consent for it to be shown to other Hub users, see the
