--- a/templates/communities/apply-labels.html
+++ b/templates/communities/apply-labels.html
@@ -48,7 +48,7 @@
 
         <div class="w-40 flex-this column align-right margin-top-16">
 
-            <div class="flex-this row margin-top-8 w-50 flex-end">
+            <div class="flex-this row mt-8 w-50 flex-end">
                 {% if project.tk_labels.all or project.bc_labels.all %}
                     {% if project.tk_labels.all %}
                         {% for tklabel in project.tk_labels.all %}
