--- a/templates/communities/edit-label.html
+++ b/templates/communities/edit-label.html
@@ -30,7 +30,7 @@
                     </div>                    
                 </div>
 
-                <div class="w-80 margin-top-8">
+                <div class="w-80 mt-8">
                     <label for="label_text">Label text</label>
                     {{ form.label_text }}<br>
 
@@ -95,7 +95,7 @@
                                 </div>
                             </div>
 
-                            <div class="w-80 margin-top-8"><label>Translated text</label><br>{{ translation_form.translated_text }}</div>    
+                            <div class="w-80 mt-8"><label>Translated text</label><br>{{ translation_form.translated_text }}</div>    
                         </div>
                     {% endfor %}   
                 {% endif %}
