--- a/templates/institutions/create-custom-institution.html
+++ b/templates/institutions/create-custom-institution.html
@@ -108,7 +108,7 @@
 
         <div class="flex-this flex-end">
             
-            <div class="margin-top-8">
+            <div class="mt-8">
                 <button class="primary-btn action-btn mt-2p" name="create-institution-btn">Continue <i class="fa fa-arrow-right"></i></button>
             </div>
         </div>
