--- a/templates/partials/_add-translation.html
+++ b/templates/partials/_add-translation.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
 
-            <div class="w-80 margin-top-8"><label>Translated text</label><br>  <div id="id_form-0-language_support" class="msg-red w-50 font-size-14" style="display: none"></div>{{ tran_form.translated_text }}</div>
+            <div class="w-80 mt-8"><label>Translated text</label><br>  <div id="id_form-0-language_support" class="msg-red w-50 font-size-14" style="display: none"></div>{{ tran_form.translated_text }}</div>
         </div>
 
         <div id="lastDiv" class="flex-this flex-end w-80"><button id="add-translation-btn" class="primary-btn green-btn"><i class="fa fa-plus" aria-hidden="true"></i> Add Translation</button></div>
