--- a/templates/partials/_connect-organization.html
+++ b/templates/partials/_connect-organization.html
@@ -109,7 +109,7 @@
                 <input id="hidden-target-input" type="hidden" value="" name="organization_name">
 
                 <div class="flex-this column w-100">
-                    <div class="margin-top-8">
+                    <div class="mt-8">
                         <label>Requested Responsibility</label><br>
                         {{ form.role }}
                         {% if form.role.errors %}
@@ -117,7 +117,7 @@
                         {% endif %}
                     </div>
                     
-                    <div class="margin-top-8">
+                    <div class="mt-8">
                         <label>Send a message with this request</label><br>
                         {{ form.message }}
                         {% if form.message.errors %}
