--- a/templates/projects/create-project.html
+++ b/templates/projects/create-project.html
@@ -175,7 +175,7 @@
                 </div>
                 <br>
 
-                <div class="flex-this margin-top-8 margin-bottom-16">
+                <div class="flex-this mt-8 margin-bottom-16">
                     <textarea id="projectLinksInput" class="w-100 block margin-right-8" rows="1"></textarea>
                     <div id="addProjectUrlBtn" class="add-square-btn pointer">
                         <span>+</span>
