--- a/templates/researchers/connect-researcher.html
+++ b/templates/researchers/connect-researcher.html
@@ -81,7 +81,7 @@
                     {% include 'partials/_alerts.html' %}
                 </div>
         
-                <div class="margin-top-8">
+                <div class="mt-8">
                     <button id="submitResearcher" class="primary-btn action-btn mt-2p">Get Started <i class="fa fa-arrow-right"></i></button>
                 </div>
             </div>
