--- a/templates/settings-base.html
+++ b/templates/settings-base.html
@@ -12,7 +12,7 @@
         <div
           class="side-nav-item {% if 'update-profile' in request.path %} selected {% else %} grey-text {% endif %}"
         >
-          <div class="w-20 margin-left-8 margin-top-8">
+          <div class="w-20 margin-left-8 mt-8">
             <i class="fa-solid fa-circle-user fa-3x"></i>
           </div>
           <div>
