--- a/templates/accounts/apikey.html
+++ b/templates/accounts/apikey.html
@@ -12,7 +12,7 @@
             <p class="mt-0">Your API key is listed below.</p>
         </div>
 
-        <div class="w-100 margin-top-8">
+        <div class="w-100 mt-8">
             <div class="flex-this">
                 <div style="width:55%;">
                     <label for="api_key">API Key</label><br>                                           
