--- a/templates/institutions/create-institution.html
+++ b/templates/institutions/create-institution.html
@@ -49,12 +49,12 @@
             </div>
         </div>
 
-        <div class="margin-top-8">
+        <div class="mt-8">
             <label class="pad-top-1-5" for="country">Country</label><br>
             {{ form.country }}                
         </div>
 
-        <div class="margin-top-8">
+        <div class="mt-8">
             <label>Institution Website</label>
             {{ form.website }}
         </div>
@@ -102,7 +102,7 @@
             </div>
         </div>
 
-        <div class="flex-this flex-end margin-top-8">
+        <div class="flex-this flex-end mt-8">
            
             
             {{ form.ror_id }}
