--- a/templates/partials/_update-account.html
+++ b/templates/partials/_update-account.html
@@ -10,7 +10,7 @@
         <div class="side-nav-container">
             <a href="{% if community %}{% url 'update-community' community.id %}{% endif %}{% if institution %}{% url 'update-institution' institution.id %}{% endif %}{% if researcher %}{% url 'update-researcher' researcher.id %}{% endif %}">
                 <div class="flex-this side-nav-item {% if '/communities/update/' in request.path %} selected {% else %} grey-text {% endif %}">
-                    <div class="w-20 margin-left-8 margin-top-8"><i class="fa-solid fa-circle-user fa-3x"></i></div>
+                    <div class="w-20 margin-left-8 mt-8"><i class="fa-solid fa-circle-user fa-3x"></i></div>
                     <div class="w-80">
                         <p class="mt-0">
                             {% if community %}
@@ -29,7 +29,7 @@
         {% if community %}
             <a href="{% if community %}{% url 'update-community-boundary' community.id %}{% endif %}">
                 <div class="flex-this side-nav-item {% if '/communities/update-community-boundary/' in request.path %} selected {% else %} grey-text {% endif %}">
-                    <div class="w-20 margin-left-8 margin-top-8"><i class="fa-solid fa-location-dot fa-3x"></i></div>
+                    <div class="w-20 margin-left-8 mt-8"><i class="fa-solid fa-location-dot fa-3x"></i></div>
                     <div class="w-80">
                         <p class="mt-1p">
                             <strong>Community Boundary</strong><br>Edit and Manage
