--- a/templates/public.html
+++ b/templates/public.html
@@ -35,7 +35,7 @@
                             {% if request_exists or community in user_communities %}
                                 <div class="primary-btn disabled-btn">Request sent <i class="fa fa-check" aria-hidden="true"></i></div>
                             {% else %}
-                                <div class="margin-top-8 margin-bottom-8">
+                                <div class="mt-8 margin-bottom-8">
                                     <a id="openRequestToJoinModalBtn" class="default-a">Request to join</a>
                                 </div>
                             {% endif %}                            
@@ -189,7 +189,7 @@
                             {% if request_exists or institution in user_institutions %}
                                 <div class="primary-btn disabled-btn">Request sent <i class="fa fa-check" aria-hidden="true"></i></div>
                             {% else %}
-                                <div class="margin-top-8 margin-bottom-8">
+                                <div class="mt-8 margin-bottom-8">
                                     <a id="openRequestToJoinModalBtn" class="default-a">Request to join</a>
                                 </div>
                             {% endif %}                                
@@ -488,7 +488,7 @@
                                 {% csrf_token %}
 
                                 <div class="flex-this column w-100">
-                                    <div class="margin-top-8">
+                                    <div class="mt-8">
                                         <label>Requested Responsibility</label>
                                         {% if institution %}
                                             <div class="tooltip" style="margin-top: 10px; margin-left: 5px;"><strong>i</strong>
@@ -515,7 +515,7 @@
                                         {% endif %}
                                     </div>
 
-                                    <div class="margin-top-8">
+                                    <div class="mt-8">
                                         <label>Include a message with this request</label><br>
                                         {{ join_form.message }}
                                         {% if join_form.message.errors %}
@@ -524,7 +524,7 @@
                                     </div>
                                 </div>
 
-                                <div class="flex-this space-between margin-top-8 w-100">
+                                <div class="flex-this space-between mt-8 w-100">
                                     <p class="w-70 mt-0">
                                         <small>By sending this request, you consent for your message and email address to be shared with account administrators.</small>
                                     </p>
