--- a/templates/snippets/modals/change-member-modal.html
+++ b/templates/snippets/modals/change-member-modal.html
@@ -36,7 +36,7 @@
                         >
                     </div>
 
-                    <div class="margin-top-8">
+                    <div class="mt-8">
                         <label>New role</label><br>
                         <select name="new_role" class="w-100">
                             <option selected="true" disabled>-------------</option>
