margin-top-10 to mt-10

--- a/templates/partials/_project-contributor-view.html
+++ b/templates/partials/_project-contributor-view.html
@@ -9,7 +9,7 @@
                 <i onclick="buttonPulse(this)" class="fa fa-copy round-btn"></i>
             </a>
         </div>
-        <div class="ml-1p margin-top-10">
+        <div class="ml-1p mt-10">
             <p class="mt-0">
                 <span class="bold">Local Contexts Unique Project ID</span><br>
                 <span id="uniqueIDToCopy">{{ project.unique_id }}</span><br>
@@ -24,7 +24,7 @@
                     <i onclick="buttonPulse(this)"  class="fa fa-copy round-btn"></i>
                 </a>
             </div>
-            <div class="ml-1p margin-top-10">
+            <div class="ml-1p mt-10">
                 <p class="mt-0">
                     <span class="bold">Providers ID</span><br>
                     <span id="providersIDToCopy">{{ project.providers_id }}</span><br>
