margin-bottom-8 to mb-8

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -2,7 +2,7 @@
 
 {% load socialaccount %}
 {% block card %}
-    <div class="flex-this space-between margin-bottom-8 w-90">
+    <div class="flex-this space-between mb-8 w-90">
         <div>
             <h2 class="mb-2p">Welcome back!</h2>
         </div>
