--- a/templates/communities/apply-labels.html
+++ b/templates/communities/apply-labels.html
@@ -126,7 +126,7 @@
                                             <span id="label-name-{{ bclabel.unique_id }}" class="grey-text">{{ bclabel.name }}</span>
                                         </div> 
 
-                                        <div class="notice-checkbox-container margin-bottom-8 m-auto margin-top-16">
+                                        <div class="notice-checkbox-container mb-8 m-auto margin-top-16">
                                             <input 
                                                 id="checked-label-{{ bclabel.unique_id }}" 
                                                 onclick="displayDefaultText(this)" 
@@ -160,7 +160,7 @@
                                                 <span id="label-name-{{ tklabel.unique_id }}" class="grey-text">{{ tklabel.name }}</span>
                                             </div> 
     
-                                            <div class="notice-checkbox-container margin-bottom-8 m-auto margin-top-16">
+                                            <div class="notice-checkbox-container mb-8 m-auto margin-top-16">
                                                 <input 
                                                     id="checked-label-{{ tklabel.unique_id }}" 
                                                     onclick="displayDefaultText(this)" 
