--- a/templates/institutions/create-custom-institution.html
+++ b/templates/institutions/create-custom-institution.html
@@ -2,7 +2,7 @@
 
 <div class="flex-this column account-registration-container">
     <div class="flex-this space-between">
-        <div><h2 class="mt-0 margin-bottom-8">Institution Account</h2></div>
+        <div><h2 class="mt-0 mb-8">Institution Account</h2></div>
         <div>Or <a class="default-a" href="{% url 'connect-institution' %}">request to join an existing institution</a>  </div>
     </div>
 
