--- a/templates/partials/_members.html
+++ b/templates/partials/_members.html
@@ -27,11 +27,11 @@
     <div>
         <h3>What responsibilities are there in the Local Contexts Hub?</h3>
 
-        <div class="flex-this margin-bottom-8">
+        <div class="flex-this mb-8">
             <div class="member-roles"><span class="bold">Administrator</span> | </div>
             <div><span>An administrator can accept new members, change member responsibilities, and remove members. They also have the abilities of an editor.</span></div>
         </div>
-        <div class="flex-this margin-bottom-8">
+        <div class="flex-this mb-8">
             <div class="member-roles"><span class="bold">Editor</span> | </div>
             <div><span>
                 {% if community %}
@@ -42,7 +42,7 @@
                 {% endif %}
             </span></div>
         </div>
-        <div class="flex-this margin-bottom-8">
+        <div class="flex-this mb-8">
             <div class="member-roles"><span class="bold">Viewer</span> | </div>
             <div><span>Viewers can see the activity happening in the account but cannot change or edit anything.</span></div>
         </div>
