--- a/templates/researchers/connect-researcher.html
+++ b/templates/researchers/connect-researcher.html
@@ -44,7 +44,7 @@
             </div>
 
 
-            <div class="margin-bottom-8">
+            <div class="mb-8">
                 <label for="primary_institution">Primary Institution</label>
                 <div class="tooltip"><strong>i</strong>
                     <span class="tooltiptext">If you are associated with an institution, please list your primary institution.</span>
@@ -55,7 +55,7 @@
                 {% endif %}
             </div>
 
-            <div class="margin-bottom-8">
+            <div class="mb-8">
                 <label>Researcher Website</label>
                 {{ form.website }}
             </div>
