--- a/templates/communities/approve-label.html
+++ b/templates/communities/approve-label.html
@@ -29,7 +29,7 @@
 
         <div id="labelNoteDiv" class="content-card-v2 content-card-space hide">
             <div class="mt-8">
-                <div class="flex-this space-between margin-bottom-8">
+                <div class="flex-this space-between mb-8">
                     <div>
                         <h4 class="mt-0">Please add a note to request changes or give reason for not approving this Label.</h4>
                     </div>
@@ -44,7 +44,7 @@
 
         <div class="content-card-v2 content-card-space"> 
             <h2 class="mt-0">Proposed Edit</h2>
-            <div class="flex-this margin-bottom-8 mt-8 about-this-label">
+            <div class="flex-this mb-8 mt-8 about-this-label">
                 <div class="w-20 margin-left-16 margin-top-16 margin-bottom-16">
                     {% if bclabel %}
                         {% include 'bclabels/which-label.html' %}
