--- a/templates/communities/create-community.html
+++ b/templates/communities/create-community.html
@@ -3,7 +3,7 @@
 <div class="flex-this column w-90">
     <div class="flex-this space-between">
         <div>
-            <h2 class="margin-bottom-8 mt-0">Community Account</h2>  
+            <h2 class="mb-8 mt-0">Community Account</h2>  
         </div>
         <div> Or <a class="default-a" href="{% url 'connect-community' %}">request to join an existing community</a> </div> 
     </div>
