--- a/templates/partials/_notices.html
+++ b/templates/partials/_notices.html
@@ -71,7 +71,7 @@
                     {% if urls %}
                         <ul>
                             {% for url in urls %}
-                                <li class="margin-bottom-8">
+                                <li class="mb-8">
                                     <div class="flex-this w-70 space-between">
                                         <a class="default-a block" href="{{ url.0 }}" target="_blank" rel="noopener">{{ url.1 }} <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i></a>
                                         {% if researcher %}
@@ -541,7 +541,7 @@
 
         <div class="w-100 flex-this column">
             <div class="w-100 flex-this column margin-bottom-16">
-                <label class="bold mt-8 margin-bottom-8 block">Local Contexts Registry URL</label>
+                <label class="bold mt-8 mb-8 block">Local Contexts Registry URL</label>
 
                 <div class="text-input-to-copy">
                     <input class="w-100 grey-chip" type="text" value="{{ request.scheme }}://{{ request.get_host }}{% if institution %}{% url 'public-institution' institution.id %}{% elif researcher %}{% url 'public-researcher' researcher.id %}{% endif %}" id="profilePageUrlToCopy" readonly>
@@ -549,7 +549,7 @@
                 </div>
 
                 <label class="bold mt-8 mb-0 block">Embed Open to Collaborate Notice</label>
-                <p class="font-size-14 mt-0 margin-bottom-8">Add this Notice to your website by copying the code below.</p>
+                <p class="font-size-14 mt-0 mb-8">Add this Notice to your website by copying the code below.</p>
 
                 <div class="text-input-to-copy">
                     <input class="w-100 grey-chip" type="text" 
@@ -570,7 +570,7 @@
                 </div>
             </div>
 
-            <div class="border-bottom-grey mt-8 margin-bottom-8"></div>
+            <div class="border-bottom-grey mt-8 mb-8"></div>
             <div class="flex-this bold">Share on Social Media</div>
             <div class="share-to-socials-container">
                 <div class="shareToSocialsBtn" data-type="otc-notice" data-social="email" data-title="Open to Collaborate Notice" data-url="{{ request.scheme }}://{{ request.get_host }}{% if institution %}{% url 'public-institution' institution.id %}{% elif researcher %}{% url 'public-researcher' researcher.id %}{% endif %}">
