--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -717,7 +717,7 @@
 
             {% endif %}
             {% if not project.project_privacy == 'Private' %}
-                <div class="border-bottom-grey mt-8 margin-bottom-8"></div>
+                <div class="border-bottom-grey mt-8 mb-8"></div>
                 
                 <a id="shareBtn" class="block pointer" onclick="openModal('shareProjectModal', 'closeShareProjectModal')"><i class="fa-solid fa-share-nodes"></i> Share</a>
 
@@ -735,13 +735,13 @@
 
                         <div class="w-100 flex-this column">
                             <div class="w-100 flex-this column margin-bottom-16">
-                                <label class="bold mt-8 margin-bottom-8 block">Local Contexts Project ID</label>
+                                <label class="bold mt-8 mb-8 block">Local Contexts Project ID</label>
                                 <div class="text-input-to-copy">
                                     <input class="w-100 grey-chip" type="text" value="{{ project.unique_id }}" id="projectUUIDToCopy" readonly>
                                     <button class="copy-btn btn-in-input" data-target="projectUUIDToCopy">Copy ID</button>
                                 </div>
     
-                                <label class="bold mt-8 margin-bottom-8 block">Local Contexts Project URL</label>
+                                <label class="bold mt-8 mb-8 block">Local Contexts Project URL</label>
     
                                 <div class="text-input-to-copy">
                                     <input class="w-100 grey-chip" type="text" value="{{ project.project_page}}" id="projectPageUrlToCopy" readonly>
@@ -749,7 +749,7 @@
                                 </div>
 
                                 <label class="bold mt-8 mb-0 block">Embed Project</label>
-                                <p class="font-size-14 mt-0 margin-bottom-8">Add this project's identifiers to your website by copying the code below.</p>
+                                <p class="font-size-14 mt-0 mb-8">Add this project's identifiers to your website by copying the code below.</p>
     
                                 <div class="text-input-to-copy">
                                     <input class="w-100 grey-chip" value='<iframe width="100%" height="150" src="{{ request.scheme }}://{{ request.get_host }}{% url "embed-project" project.unique_id %}" title="Local Contexts Project Identifiers" frameborder="0"></iframe>' type="text" data-url='{{ request.scheme }}://{{ request.get_host }}{% url "embed-project" project.unique_id %}' title="Local Contexts Project Identifiers" id="embedToCopy" readonly>
@@ -795,7 +795,7 @@
                                 </div>
                             </div>
 
-                            <div class="border-bottom-grey mt-8 margin-bottom-8"></div>
+                            <div class="border-bottom-grey mt-8 mb-8"></div>
                             <div class="flex-this bold">Share on Social Media</div>
                             <div class="share-to-socials-container">
                                 <div class="shareToSocialsBtn" data-type="project" data-social="email" data-title="{{ project.title }}" data-url="{{ project.project_page }}">
@@ -857,7 +857,7 @@
             {% if 'projects/actions/' in request.path %}
 
                 {% if request.user.is_authenticated and request.user == project.project_creator %}
-                    <div class="border-bottom-grey mt-8 margin-bottom-8"></div>
+                    <div class="border-bottom-grey mt-8 mb-8"></div>
 
                     <a 
                         class="block" 
