--- a/templates/projects/project-status.html
+++ b/templates/projects/project-status.html
@@ -26,7 +26,7 @@
                         {% csrf_token %}
                         <input id="status-selection-input-{{ project.unique_id }}" type="hidden" value="placeholder" name="project-status">
 
-                        <div class="border-bottom-grey mt-8 margin-bottom-8"></div>
+                        <div class="border-bottom-grey mt-8 mb-8"></div>
 
                         <div>
                             <span>Project Status</span>
