--- a/templates/public.html
+++ b/templates/public.html
@@ -35,7 +35,7 @@
                             {% if request_exists or community in user_communities %}
                                 <div class="primary-btn disabled-btn">Request sent <i class="fa fa-check" aria-hidden="true"></i></div>
                             {% else %}
-                                <div class="mt-8 margin-bottom-8">
+                                <div class="mt-8 mb-8">
                                     <a id="openRequestToJoinModalBtn" class="default-a">Request to join</a>
                                 </div>
                             {% endif %}                            
@@ -189,7 +189,7 @@
                             {% if request_exists or institution in user_institutions %}
                                 <div class="primary-btn disabled-btn">Request sent <i class="fa fa-check" aria-hidden="true"></i></div>
                             {% else %}
-                                <div class="mt-8 margin-bottom-8">
+                                <div class="mt-8 mb-8">
                                     <a id="openRequestToJoinModalBtn" class="default-a">Request to join</a>
                                 </div>
                             {% endif %}                                
